2009-05-12  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#115698 - Windows not updating in some cases

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed usage of
	clutter GLX texture pixmaps as they currently don't work properly
	in scratchbox. Also disabled MBWMCompMgrClutterClientDontUpdate on
	scratchbox as this caused NB#115698 (It only existed as a minor
	performance improvement, and accuracy is more important in scratchbox)

2009-05-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.38

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_turn_on_real): Trap X errors and check that
	clutter_x11_get_stage_window succeeds. Fixes: NB#115724
	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify): Trap X
	errors for the XGetWindowAttributes. Fixes: NB#114908

2009-05-08  Thomas Thurman  <thomas.thurman@collabora.co.uk>
	
	NB#106650: ROTATION: HildonAppMenu is too narrow in portrait

	* matchbox/client-types/mb-wm-client-menu.c: in portrait mode,
	menus take up the whole width of the screen.  Fixes NB#106650.

2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix.  We died when the transient-for was unmapped then
	remapped again.  It's still garbage (the application becomes
	unresponsive and uncloseable) but at least we surive.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_destroy):
	  Reinstantiated the code which detransitived the destroyed
	  client's transients.  I don't know what does it take for
	  people to read the **** comments around code?
	* matchbox/core/mb-window-manager.c (mb_wm_focus_client):
	  Removing some nonsense code.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/mb-wm-config.h.in:
	  Introducing MBWM_DEB_VERSION to tell you the users of the library
	  the Debian source package version which it was built from.
	* debian/rules
	* configure.ac

2009-05-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere: