@@ -1,3 +1,11 @@
+2009-05-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/core/mb-wm-client.c
+	(mb_wm_client_get_last_focused_transient): Use
+	mb_wm_stack_enumerate_reverse instead of mb_wm_stack_enumerate to
+	enumerate from the top of the stack. Makes it a bit more efficient and
+	readable.
+
 2009-05-12  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#115698 - Windows not updating in some cases
